mudancas da identacao e alteracao para utilizar interfaces nos services